# model_profiler

./: .gitignore  README.md  estimatetime_profile_report.xlsx  example.py  example_estimatetime.py  pyproject.toml  setup.py  simplecnn_profile.xlsx
model_profiler/: profiler.py
