[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-profiler"              # pip install 的名字
version = "0.1.0"
description = "A PyTorch model profiling tool for FLOPs, memory, and visualization."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name="Chih-Sheng (Tommy) Huang", email="chih.sheng.huang821@gmail.com" }
]
dependencies = [
  "torch>=1.10",
  "torchvision",
  "prettytable",
  "openpyxl",
  "torchview",
]

[project.urls]
Homepage = "https://github.com/TommyHuang821/model-profiler"

